# gate

./: CMakeLists.txt  gatekateplugin.cpp  gatekateplugin.h  kateconsole.cpp  kateconsole.h  kategateplugin.desktop  ui.rc
